Fix Deprecations