@@ -312,7 +312,7 @@ public class JSONWriter {
    *           If the number is not finite.
    */
   public JSONWriter value(double d) throws JSONException {
-    return this.value(new Double(d));
+    return this.value(Double.valueOf(d));
   }
 
   /**
